--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 :root {
  --color-lighter-blue:#007bff;
  --color-darker-blue:#0056b3; 
@@ -14,6 +12,8 @@ body {
     display: flex;
     background-color: var(--color-grey);
     font-family: sans-serif;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .right-part {
@@ -23,8 +23,8 @@ body {
     justify-content: flex-start;
     align-items: center;
     margin-right: 0.8rem;
+    overflow-y: scroll;
 }
-
 .right-part_title {
     display: block;
     width: 100%;
@@ -32,7 +32,6 @@ body {
     padding: 2rem;
     
 }
-
 .right-part_article {
     display: flex;
     flex-direction: column;
@@ -47,16 +46,14 @@ body {
 
 .article_theme {
     width: 25%;
-    border-radius: 5px;
+    border-radius: 5px;padding: 0;
     padding: 0.3rem;
     margin-bottom: 2rem;
     text-align: center;
     color: var(--color-white);
     text-transform: uppercase;
     font-weight: bold;
-    background-color: var(--color-green);
 }
-
 .theme--green {
     background-color: var(--color-green);
 }
@@ -67,7 +64,99 @@ body {
     background-color: var(--color-red);
 }
 
+.article_title{
+    font-size:2.3rem;
+    margin-bottom: 2rem;
+}
+
+.article_author {
+  display: flex;
+  align-items: center;
+  gap:2rem;
+  margin-bottom: 2rem;   
+}
+.author_img {
+    width: 3rem;
+}
+.author_name {
+    font-weight:bold;
+}
+.author_time {
+    color: rgb(165, 164, 164);
+    font-weight:normal;
+}
+
+.article_text {
+    margin-bottom:2rem;
+    font-size:1.3rem;
+    
+}
+.article_link {
+    color: var(--color-lighter-blue);
+    font-weight: bold;
+}
 
 .left-part {
-    width: 50%;
+    width: 50vw;
+    height: 100vh;
+    background-image: url(./images/nicole.jpg);
+    background-origin: border-box;
+    background-size: cover;
+    background-position: center;
+    color: var(--color-white);
+}
+.left-part_header {
+    display: flex;
+    padding: 2rem;
+
+}
+.header_logo {
+    width: 4rem;
+    height: 4rem;
+    margin-top: 1.2rem;
+    margin-right: 0.5rem;
+}
+.header_title {
+    height: 8rem;
+    font-size: 2.2rem;
+    text-transform: uppercase;
+    display: flex;
+    flex-direction: column; 
+    letter-spacing: normal;
+    margin-bottom: 12rem;
+}
+.header_title span {
+    height: 2.2rem;
+}
+
+.left-part_article {
+    width: 90%;
+    background-color: rgba(207, 207, 207, 0.3);
+    z-index: 0.5;
+    text-align: end;
+    padding: 2rem;
+    margin : 2rem auto;
+}
+.article_title1 {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+}
+.article_title1 span {
+    font-size: 1.5rem;
+    font-weight: normal;
+    font-style: italic;
+}
+
+.left-part_footer {
+    padding: 2rem;
+    margin-top: 14rem;
+    display: flex;
+    gap : 4rem;
+    justify-content: flex-end;
+}
+.footer_link {
+    color: var(--color-white);
+    text-decoration: none;
+    font-size: 1.2rem;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
 }
